Remove COLNAMES from *DawgLetter*